Méthode get doc et Réponse Contact
